is configurable from the rc file (see sample-rc).

Charles Duffy has added a yank/put thing - C-k and C-y. He also ran the code
through some PEP-8 checker thing and fixed up a few old habits I manage to
break but didn't manage to fix the code to reflect this - thank you!

Jørgen Tjernø has fixed up the autoindentation issues we encountered when
bringing soft tabs in.

v0.7.0
======
C-d behaviour changed so it no longer exits if the current line isn't empty.

Extra linebreak added to end of stdout flush.

pygments and pyparsing are now dependencies.

Jørgen Tjernø has done lots of cool things like write a manpage and .desktop
file and improved the way tabbing works and also added home, end and del key
handling as well as C-w for deleting words - thanks a lot!

raw_input() and all its friends now work fine.

PYTHONSTARTUP handled without blowing up on stupid errors (it now parses the
file at once instead of feeding it to the repl line-by-line).

v0.6.4
======
KeyboardInterrupt handler clears the list window properly now.

v0.6.3
======
Forgot to switch rpartition to split for 2.4 compat.

v0.6.2
======
The help() now works (as far as I can see) exactly the same
as the vanilla help() in the regular interpreter. I copied some
code from pydoc.py to make it handle the special cases, e.g.
help('keywords')
help('modules')
etc.

v0.6.1
======
Somehow it escaped my attention that the list window was never
fully using the rightmost column, except for the first row. This
is because me and numbers don't have the best relationship. I think
stability is really improving with the latest spat of bugfixes,
keep me informed of any bugs.

v0.6.0
======
No noticeable changes except that bpython should now work with
Python 2.4. Personally I think it's silly to make a development
tool work with an out of date version of Python but some people
seem to disagree. The only real downside is that I had to do a
horrible version of all() using reduce(), otherwise there's no